<resources>
    <string name="app_name">TabataTimer</string>
    <string name="seconds_per_round">Seconds per Round</string>
    <string name="seconds_per_pause">Seconds per pause</string>
    <string name="how_many_rounds">How many Rounds</string>
    <string name="run">Run</string>
    <string name="tabata_normal_round">Tabata / Normal round</string>
    <string name="runningTimerText">Timer running</string>
    <string name="defaultTabataRaound">20</string>
    <string name="tabataDefaultRound">20</string>
    <string name="tabataDefaultPause">10</string>
    <string name="tabataDefaultSetsNo">8</string>
    <string name="lock_screen_rotation">Lock screen rotation\t</string>
    <string name="restart_session_btn">Restart\nsession</string>
    <string name="config_default_tabata_round">20</string>
    <string name="config_default_tabata_pause">10</string>
    <string name="config_default_tabata_set_number">8</string>
    <string name="tabataTimerTitle">Tabata Timer configuration</string>
    <string name="session_finished">Session\nfinished</string>
    <string name="pref_lock_screen_summary">Check the box to instruct the app to use a pre-start round</string>
    <string name="pref_lock_screen_title">Use pre-start round</string>
    <string name="pref_prestart_summary">Enter a new pre-start value, in seconds</string>
    <string name="pref_prestart_title">Set new pre-start value</string>
    <string name="pref_lockscreen">pref_lock_screen</string>
    <string name="pref_prestart">pref_prestart</string>
    <string name="pref_prestart_description">pref_editprestart</string>
    <string name="pref_prestart_new_value">edit_text_preference_1</string>
    <!--Timer preferences keys-->
    <!--defaults-->
    <string name="prefs_Def_tabata_preferences_initialized">prefs_Def_tabata_preferences_initialized</string>
    <string name="prefs_Def_tabata_round_key">prefs_Def_tabata_round_key</string>
    <string name="prefs_Def_tabata_pause_key">prefs_Def_tabata_pause_key</string>
    <string name="prefs_Def_tabata_sets_key">prefs_Def_tabata_sets_key</string>
    <string name="prefs_Def_box_round_key">prefs_Def_box_round_key</string>
    <string name="prefs_Def_box_pause_key">prefs_Def_box_pause_key</string>
    <string name="prefs_Def_box_sets_key">prefs_Def_box_sets_key</string>
    <string name="prefs_Def_interval_round_key">prefs_Def_interval_round_key</string>
    <string name="prefs_Def_interval_pause_key">prefs_Def_interval_pause_key</string>
    <string name="prefs_Def_interval_sets_key">prefs_Def_interval_sets_key</string>
    <!--user saved timers-->
    <string name="prefs_US_tabata_preferences_initialized">prefs_US_tabata_preferences_initialized</string>
    <!--<string name="prefs_US_custom_round_key">prefs_US_tabata_round_key</string>-->
    <!--<string name="prefs_US_tabata_pause_key">prefs_US_tabata_pause_key</string>-->
    <!--<string name="prefs_US_tabata_sets_key">prefs_US_tabata_sets_key</string>-->
    <!--<string name="prefs_US_box_round_key">prefs_US_box_round_key</string>-->
    <!--<string name="prefs_US_box_pause_key">prefs_US_box_pause_key</string>-->
    <!--<string name="prefs_US_box_sets_key">prefs_US_box_sets_key</string>-->
    <!--<string name="prefs_US_interval_round_key">prefs_US_interval_round_key</string>-->
    <!--<string name="prefs_US_interval_pause_key">prefs_US_interval_pause_key</string>-->
    <!--<string name="prefs_US_interval_sets_key">prefs_US_interval_sets_key</string>-->
    <string name="prefs_US_max_no_of_timers">prefs_US_max_no_of_timers</string>
    <string name="prefs_US_current_no_of_timers">current_no_of_timers</string>
</resources>
