<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_loader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moonapps.moonmoon.tabatatimer.TabataTimer.TabataConfigurationActivity">

    <EditText
        android:id="@+id/config_round_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/boxConfigSpaceBetween"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/config_default_tabata_round"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/config_pause_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_round_timer"
        android:layout_alignStart="@+id/config_round_timer"
        android:layout_below="@id/config_round_timer"
        android:layout_marginBottom="@dimen/boxConfigSpaceBetween"
        android:ems="10"
        android:inputType="number"
        android:text="@string/config_default_tabata_pause"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/config_round_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/config_round_timer"
        android:layout_alignLeft="@+id/config_pause_timer"
        android:layout_alignRight="@+id/config_round_timer"
        android:layout_alignStart="@+id/config_pause_timer"
        android:layout_below="@+id/config_pause_timer"
        android:layout_marginBottom="@dimen/boxConfigSpaceBetween"
        android:ems="10"
        android:inputType="number"
        android:text="@string/config_default_tabata_set_number"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/config_round_timer_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/config_round_timer"
        android:text="@string/seconds_per_round" />

    <TextView
        android:id="@+id/config_pause_timer_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/config_pause_timer"
        android:text="@string/seconds_per_pause" />

    <TextView
        android:id="@+id/config_round_number_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/config_round_number"
        android:text="@string/how_many_rounds" />

    <Button
        android:id="@+id/run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/config_round_number"
        android:layout_marginTop="35dp"
        android:width="500dp"
        android:onClick="runClickHandler"
        android:text="@string/run" />

    <Switch
        android:id="@+id/run_lock_screen_switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:onClick="setScreenOrientation"
        android:text="@string/lock_screen_rotation"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_above="@id/run_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">



    </LinearLayout>


</RelativeLayout>
