<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <GridLayout
        android:id="@+id/data_input_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/config_round_timer_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/config_round_timer"
            android:layout_column="0"
            android:layout_row="0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/seconds_per_round"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:typeface="normal"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/config_pause_timer_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/config_pause_timer"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/seconds_per_pause"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/config_round_number_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/config_round_number"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/how_many_rounds"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/config_pause_timer"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/config_default_tabata_pause"
            android:textAlignment="center"
            android:textSize="45sp"
            android:selectAllOnFocus="true"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/config_round_number"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="2"
            android:ems="10"
            android:inputType="number"
            android:text="@string/config_default_tabata_set_number"
            android:textAlignment="center"
            android:textSize="45sp"
            android:selectAllOnFocus="true"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/config_round_timer"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginRight="10dp"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="0"
            android:ems="10"
            android:inputType="number"
            android:text="@string/config_default_tabata_round"
            android:textAlignment="center"
            android:textSize="45sp"
            android:selectAllOnFocus="true"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold" />

    </GridLayout>


    <View
        android:id="@+id/dividerLineUp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/data_input_grid_layout"
        android:layout_marginTop="10dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/run_button_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/dividerLineUp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="148dp"
            android:layout_height="151dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:onClick="runClickHandler"
            android:src="@drawable/glossy_red_play_button" />
    </LinearLayout>

    <View
        android:id="@+id/dividerLineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/run_button_layout"
        android:layout_marginTop="20dp"
        android:background="#000000" />

    <Switch
        android:id="@+id/run_lock_screen_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:onClick="setScreenOrientation"
        android:text="@string/lock_screen_rotation"
        android:textSize="@dimen/text_size_cofigurantion_tags"

        />
</RelativeLayout>