<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <View
        android:id="@+id/dividerLineUp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/cfg_run_timer_button"
        android:layout_marginBottom="20dp"
        android:background="#000000" />

    <ImageButton
        android:id="@+id/cfg_run_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dividerLineBottom"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/ico_start"
        android:onClick="runClickHandler"/>

    <View
        android:id="@+id/dividerLineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="#000000" />

    <ImageButton
        android:id="@+id/cfg_screen_lock_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitCenter"
        android:layout_above="@id/dividerLineBottom"
        android:background="@color/colorPrimary"
        android:src="@drawable/lock_closed"
        android:onClick="runLockMessage" />

    <ImageButton
        android:id="@+id/cfg_save_timer_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/cfg_data_input_grid_layout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/ico_add"
        android:clickable="true"
        android:onClick="runSaveNewTimer"/>

    <GridLayout
        android:id="@+id/cfg_data_input_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="77dp"
        android:layout_above="@+id/dividerLineUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/cfg_round_timer_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/cfg_round_timer_edit"
            android:layout_column="0"
            android:layout_row="0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/seconds_per_round"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/cfg_pause_timer_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/cfg_pause_timer_edit"
            android:layout_column="0"
            android:layout_row="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/seconds_per_pause"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/cfg_round_number_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/cfg_sets_number_edit"
            android:layout_column="0"
            android:layout_row="2"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/how_many_rounds"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/cfg_pause_timer_edit"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="1"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/config_default_tabata_pause"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/cfg_sets_number_edit"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="2"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/config_default_tabata_set_number"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/cfg_round_timer_edit"
            android:layout_width="@dimen/configuration_input_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="@dimen/edit_text_input_left_margin"
            android:layout_marginRight="10dp"
            android:layout_marginStart="@dimen/edit_text_input_left_margin"
            android:layout_row="0"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/config_default_tabata_round"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="normal|bold" />

    </GridLayout>

</RelativeLayout>